--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.mercadopago.point.integration.basic.Main">
+        <activity android:name=".basic.Main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.mercadopago.point.integration.basic.Resultado">
+        <activity android:name=".basic.Resultado">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -27,6 +27,16 @@
                     android:scheme="demo" />
             </intent-filter>
         </activity>
+
+        <receiver
+            android:name=".basic.ReferrerCatcher"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.android.vending.INSTALL_REFERRER" />
+            </intent-filter>
+        </receiver>
+
+        <activity android:name=".basic.RefererActivity"></activity>
     </application>
 
 </manifest>
